Data Notebook changes

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "043a6db0",
    "metadata": {},
    "outputs": [
@@ -751,12 +751,17 @@
     "plt.xlabel(\"Class\")\n",
     "plt.ylabel(\"Count\")\n",
     "plt.tight_layout()\n",
-    "plt.show()"
+    "\n",
+    "out_path = os.path.join(PROJECT_ROOT, \"assets\", \"class_distribution.png\")\n",
+    "plt.savefig(out_path, dpi=500, bbox_inches=\"tight\")\n",
+    "\n",
+    "plt.show()\n",
+    "print(\"Saved:\", out_path)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "519d9341",
    "metadata": {},
    "outputs": [
@@ -778,7 +783,12 @@
     "plt.xlabel(\"Amount\")\n",
     "plt.ylabel(\"Density (log scale)\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "\n",
+    "out_path = os.path.join(PROJECT_ROOT, \"assets\", \"amount_distribution.png\")\n",
+    "plt.savefig(out_path, dpi=500, bbox_inches=\"tight\")\n",
+    "\n",
+    "plt.show()\n",
+    "print(\"Saved:\", out_path)\n"
    ]
   },
   {
@@ -811,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "544e5923",
    "metadata": {},
    "outputs": [
@@ -890,7 +900,12 @@
     "sns.heatmap(corr_matrix, annot=True, fmt=\".2f\", cmap=\"coolwarm\")\n",
     "plt.title(\"Correlation of Top Features with Class\")\n",
     "plt.tight_layout()\n",
-    "plt.show()\n"
+    "\n",
+    "out_path = os.path.join(PROJECT_ROOT, \"assets\", \"corr_top_features.png\")\n",
+    "plt.savefig(out_path, dpi=150, bbox_inches=\"tight\")\n",
+    "\n",
+    "plt.show()\n",
+    "print(\"Saved:\", out_path)\n"
    ]
   },
   {
