UI Notebook update

--- a/notebooks/eda.ipynb
+++ b/notebooks/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "ed6f6a73",
    "metadata": {},
    "outputs": [],
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "id": "d0c4bf8b",
    "metadata": {},
    "outputs": [
@@ -218,7 +218,7 @@
        "[5 rows x 31 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "e631b01c",
    "metadata": {},
    "outputs": [
@@ -705,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "043a6db0",
    "metadata": {},
    "outputs": [
@@ -735,6 +735,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /Users/seore/Documents/GitHub/fraud-detect/assets/class_distribution.png\n"
+     ]
     }
    ],
    "source": [
@@ -761,7 +768,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "519d9341",
    "metadata": {},
    "outputs": [
@@ -774,6 +781,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /Users/seore/Documents/GitHub/fraud-detect/assets/amount_distribution.png\n"
+     ]
     }
    ],
    "source": [
@@ -793,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "id": "53c17fb1",
    "metadata": {},
    "outputs": [
@@ -821,7 +835,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "544e5923",
    "metadata": {},
    "outputs": [
@@ -881,6 +895,13 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved: /Users/seore/Documents/GitHub/fraud-detect/assets/corr_top_features.png\n"
+     ]
     }
    ],
    "source": [
@@ -910,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "id": "a272946e",
    "metadata": {},
    "outputs": [
